third_party/move/move-compiler-v2/tests/checking-lang-v1/access_ok.exp

Diagnostics:
error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:11:14
   │
11 │     fun f2() reads S {
   │              ^^^^^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:14:14
   │
14 │     fun f3() writes S {
   │              ^^^^^^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:20:33
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                 ^^^^^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:20:41
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                         ^^^^^^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:20:53
   │
20 │     fun f_multiple() acquires R reads R writes T, S reads G<u64> {
   │                                                     ^^^^^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:45:15
   │
45 │     fun f11() !reads *(0x42), *(0x43) {
   │               ^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:45:16
   │
45 │     fun f11() !reads *(0x42), *(0x43) {
   │                ^^^^^ Move 2 language construct is not enabled: access specifiers

error: unsupported language construct
   ┌─ tests/checking-lang-v1/access_ok.move:48:15
   │
48 │     fun f12() pure {
   │               ^^^^ Move 2 language construct is not enabled: access specifiers
